# trevoga--

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json
.github/workflows/: build.yml
include/: CMakeLists.txt  config_manager.hpp  hotkey.hpp  process_utils.hpp
src/: CMakeLists.txt  config_manager.cpp  hotkey.cpp  main.cpp  process_utils.cpp
tests/: CMakeLists.txt  test_cmake_demo.cpp
